--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # $File: //member/autrijus/CPANPLUS-Dist/README $ $Author: autrijus $
-# $Revision: #2 $ $Change: 7721 $ $DateTime: 2003/08/26 10:53:44 $
+# $Revision: #3 $ $Change: 10593 $ $DateTime: 2004/05/11 13:17:45 $
 
 This is the README file for CPANPLUS::Dist, a plugin on CPANPLUS to
 support other distribution formats.
@@ -16,8 +16,8 @@ make install
 
 * Copyright
 
-Copyright 2001, 2002, 2003 by Jos Boumans <kane@cpan.org>,
-                              Autrijus Tang <autrijus@autrijus.org>.
+Copyright 2001, 2002, 2003, 2004 by Jos Boumans <kane@cpan.org>,
+                                    Autrijus Tang <autrijus@autrijus.org>.
 
 All rights reserved.  You can redistribute and/or modify
 this bundle under the same terms as Perl itself.
